2007-02-26  Andrew Cagney  <cagney@redhat.com>

	* StackFrame.java (getLines): New.
	* Line.java: New.

	* StackFrame.java: Rename myCursor to cursor.  Rename myTask to
	task.
	(hasDebugInfo): Delete.

	* StackFrame.java (getSymbolName): Delete.

2007-02-26  Mike Cvet  <mcvet@redhat.com>

	* TestFrameIdentifier.java (testEquals): Added test for
	non-FrameIdentifier objects.

2007-02-26  Andrew Cagney  <cagney@redhat.com>

	* StackFrame.java (getMethodName): Delete.
	(toPrint): Update, use getSymbol.
	* TestRunState.java: Update, use getSymbol.

2007-02-26  Mike Cvet  <mcvet@redhat.com>

	* FrameIdentifier.java: Added Javadoc.
	(equals): Returns false if the parameter is not an instanceof
	FrameIdentifier.

2007-02-26  Tim Moore  <timoore@redhat.com>

	* BreakpointObserver:New file.
	* LineBreakpoint: New file.
	* RunState.java (SourceBreakpoint): Change name of class to
	PersistentBreakpoint.
	(PersistentBreakpoint.getObserver,
	PersistentBreakpoint.setObserver):new methods.
	(PersistentBreakpoint.updateHit): Call breakpoint observer.
	(addPersistentBreakpoint, deletePersistentBreakpoint): New methods.

2007-02-23  Andrew Cagney  <cagney@redhat.com>

	* TestSymbol.java: Rename TestStackFrame.java.
	* Symbol.java: New file.
	* StackFrame.java (getSymbol): New method.

	* TestStackFrame.java (testFrameIdentifer): Delete.
	* TestFrameIdentifier.java: New file.
	* StackFrame.java: Create the FrameIdentifier on-demand.

2007-02-22  Mike Cvet  <mcvet@redhat.com>

	* TestStackFrame.java (testFrameIdentifier): Added. Tests the 
	relationships between FrameIdentifiers belonging to different frames in
	the same stack. Fixes #4091.
	(StackFrameTest): Added. Dummy StackFrame class for testing
	FrameIdentifiers.
	* StackFrame.java (hasDebugInfo): Added. Returns true if the StackFrame
	has debuginfo.
	* RunState.java (setUpLineStep): Made more threading-aware. Returns a
	boolean if RunState is in the proper state for step work.
	(stepInstruction): Ditto.
